[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsgmfss_union"
version = "1.0.0"
description = "GMFSS_union function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "HolyWu", email = "holywu@gmail.com"}]
keywords = ["GMFSS_union", "VapourSynth"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "cupy-cuda11x",
  "numpy",
  "tensorrt>=8.5.2.2",
  "torch>=1.13.0",
  "torch-tensorrt-fx-only>=1.3.0",
  "VapourSynth>=55"
]

[project.urls]
"Homepage" = "https://github.com/HolyWu/vs-gmfss_union"
"Bug Tracker" = "https://github.com/HolyWu/vs-gmfss_union/issues"
